# bough

./: .gitignore  Cargo.toml  README.md
bough/: Cargo.toml
bough-lib/: Cargo.toml  README.md
bough-lib/examples/: filetree.rs  fstree.rs  text.rs
bough-lib/src/: border.rs  format.rs  lib.rs  output.rs  tree.rs
bough-lib/src/format/: ansi.rs  html.rs  text.rs
bough-lib/src/output/: display.rs  filetypes.rs  icons.rs  tree.rs
bough-lib/src/output/display/: html.rs  text.rs
bough-lib/src/tree/: file.rs  filetypes.rs  fs_tree.rs  icons.rs  tree.rs
bough-lib/tests/: common.rs  text.rs
bough/src/: cli.rs  files.rs  main.rs
boughd/: Cargo.toml  README.md
